@@ -1,5 +1,10 @@
 2006-12-03  Guillem Jover  <guillem@hadrons.org>
 
+	* 3dfx_device.c (doQueryFetch): Assign desc->device to i, and use it
+	when referencing cards.
+
+2006-12-03  Guillem Jover  <guillem@hadrons.org>
+
 	* 3dfx_device.c (setmtrr_3dfx): Make it static.
 	(resetmtrr_3dfx): Likewise.
 
